# custom_json_encoder

./: .gitignore  README.md  pyproject.toml
examples/: CMakeLists.txt  README.md  swigtest.hpp  swigtest.i  test_swigtest.py
src/: custom_json_encoder.py
